tests/ui-nightly/diagnostic-not-implemented-from-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-from-bytes.rs:16:24
   |
16 |     takes_from_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromBytes` is not implemented for `NotZerocopy`
  --> tests/ui-nightly/../include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `takes_from_bytes`
  --> tests/ui-nightly/diagnostic-not-implemented-from-bytes.rs:19:24
   |
19 | fn takes_from_bytes<T: FromBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_bytes`
   = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-5244b3a3d2b40774.long-type-12704318701019990920.txt'
   = note: consider using `--verbose` to print the full type name to the console
